--- a/client/client.jade
+++ b/client/client.jade
@@ -6,7 +6,7 @@ head
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="black")
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
-    // link(href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet")
     //- script(src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js")
 
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
@@ -34,8 +34,7 @@ head
 
 template(name='layout')
     .ui.bottom.attached.pushable.segment
-        #main_area.global_container.pusher
-            +yield
+        +yield
 
 
 template(name='not_found')
@@ -66,7 +65,7 @@ template(name='home')
             each result_tags
                 +tag_picker
             .ui.hidden.divider
-            .ui.two.column.centered.grid.scrolling
+            .ui.three.column.centered.stackable.grid.scrolling.pushed
                 each posts
                     +post_card_small
                 
@@ -74,7 +73,7 @@ template(name='home')
                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    button.ui.compact.basic.large.circular.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    button.ui.compact.basic.large.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -83,7 +82,7 @@ template(name='tag_picker')
         //     small #{count}
             
 template(name='unpick_tag')
-    button.unpick_tag.ui.active.compact.large.circular.button
+    button.unpick_tag.ui.active.compact.large.button
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -93,7 +92,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    a.ui.link.small.image.label.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    a.ui.compact.small.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -110,7 +109,8 @@ template(name='post_card_small')
             // a.ui.header.zoomer(href="/#{group}/p/#{_id}") #{title}
             // a.ui.center.aligned.small.header.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
             a.ui.center.aligned.grey.header(href=url target='_window')
-                |!{data.title}
+                // |!{data.title} #{lowered_title}
+                |#{lowered_title}
             if embed
                 span.rounded.full
                     |!{embed}
@@ -119,10 +119,11 @@ template(name='post_card_small')
                 img.ui.fluid.rounded.image.toggle_view(src=url)
             else if data.thumbnail_width
                 img.ui.fluid.rounded.image.zoomer(src=data.thumbnail)    
-            |#{ups}
-            i.thumbs.up.outline.icon
-            |#{comment_count}
-            i.chat.outline.icon
+            // |#{ups}
+            // i.thumbs.up.outline.icon
+            // |#{comment_count}
+            // i.chat.outline.icon
+            span.ui.text {{ufrom data.created}}
             with subreddit
                 +flat_tag_picker
                 // .ui.basic.label #{this}
