--- a/client/style.css
+++ b/client/style.css
@@ -1,13 +1,40 @@
+body {
+  /* font-family: 'Raleway', sans-serif !important; */
+  font-family: 'Ubuntu', sans-serif !important; 
+  /* font-family: 'Lato+Mono', sans-serif !important; */
+  /* font-family: 'Lato', sans-serif !important; */
+  /*font-size: 100% !important; */
+  /* line-height: 200% !important; */
+  /*background: rgba(0,0,0,.1) !important; */
+  /*scroll-behavior: smooth;*/
+  /*margin-top: 5em;*/
+  -webkit-font-smoothing: antialiased; 
+  -moz-osx-font-smoothing: grayscale;
+
+  background: rgba(200,200,200,1) !important;
+  /*filter: invert(1) !important; */
+  /*overscroll-behavior: none; */
+  /*transition: all .15s ease !important;*/
+  /*background: #0e0e44 !important; */
+}
+.header {
+  font-family: 'Ubuntu', sans-serif !important; 
+    
+}
+.pushed {
+    margin-left:5px !important;
+}
 .button {
     margin:2px !important;
 }
 
-input {
+.input {
+    margin-top: 10px !important;
     border-radius: 20px !important;
 }
 
 .scrolling{
-    max-height: 120vh !important;
+    max-height: 90vh !important;
     /*min-height: 50vh !important;*/
     /* padding: 5px !important;
     border-radius: 7px !important;
