--- a/client/client.jade
+++ b/client/client.jade
@@ -129,6 +129,6 @@ template(name='post_card_small')
                 // .ui.basic.label #{this}
             each five_tags
                 +flat_tag_picker
-            a(href=permalink target='_window') #{domain}
+            a(href="https://www.reddit.com#{permalink}" target='_window') #{domain}
             div
             .ui.hidden.divider            
