controlled pub fields for posts, black unselect, circular buttons

--- a/client/client.jade
+++ b/client/client.jade
@@ -48,7 +48,7 @@ template(name='home')
     .ui.stackable.grid
         .sixteen.wide.center.aligned.column.seg
             if counter
-                span.ui.large.text   
+                span.ui.text   
                     |#{counter}
             if picked_tags
                 // if many_tags
@@ -58,7 +58,7 @@ template(name='home')
                     +unpick_tag
             .ui.icon.large.input
                 if is_loading
-                    i.yin.yang.loading.icon
+                    i.yin.yang.loading.large.icon
                 else
                     i.search.icon
                 input.search_tag(type='text' value=query autofocus='')
@@ -73,7 +73,7 @@ template(name='home')
                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    button.ui.compact.basic.large.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    button.ui.compact.basic.large.circular.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -82,7 +82,7 @@ template(name='tag_picker')
         //     small #{count}
             
 template(name='unpick_tag')
-    button.unpick_tag.ui.active.compact.large.button
+    button.unpick_tag.ui.black.circular.compact.large.button
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -92,7 +92,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    a.ui.compact.small.basic.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    a.ui.compact.small.basic.circular.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
