--- a/client/client.jade
+++ b/client/client.jade
@@ -67,7 +67,7 @@ template(name='home')
                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    button.ui.compact.basic.large.circular.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    button.ui.compact.basic.large.circular.inverted.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -76,14 +76,12 @@ template(name='tag_picker')
         //     small #{count}
             
 template(name='unpick_tag')
-    button.unpick_tag.ui.black.circular.compact.large.button
+    button.unpick_tag.ui.black.circular.compact.large.inverted.button.invert
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
         strong #{this}
 
-        
-        
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
     a.ui.compact.small.basic.circular.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
@@ -99,7 +97,7 @@ template(name='flat_tag_picker')
    
 template(name='post_card_small')
     .center.aligned.column
-        .content.zoomer.card_small
+        .content.zoomer.card_small.invert
             // a.ui.header.zoomer(href="/#{group}/p/#{_id}") #{title}
             // a.ui.center.aligned.small.header.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
             a.ui.center.aligned.grey.header(href=url target='_window')
@@ -125,6 +123,8 @@ template(name='post_card_small')
                 // .ui.basic.label #{this}
             each five_tags
                 +flat_tag_picker
-            a(href="https://www.reddit.com#{permalink}" target='_window') #{domain}
+            a.ui.icon.compact.circular.basic.button(href="https://www.reddit.com#{permalink}" target='_window' title=domain)
+                // |#{domain}
+                i.external.icon
             div
             .ui.hidden.divider            
