--- a/client/style.css
+++ b/client/style.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background: rgba(200,200,200,1) !important;
-  /*filter: invert(1) !important; */
+  filter: invert(1) !important; 
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -50,4 +50,9 @@ input {
     /*padding-top: .5em; */
     padding: 1em;
     /*padding-left: 1em;*/
+}
+
+/*iframe, img, a, .image, .invert, .button {*/
+.button, .text, button, .invert{
+    filter: invert(1) !important; 
 }
