more detailed animations, timer with toggle for reload, speak on title, 20 tags from 15

--- a/client/client.jade
+++ b/client/client.jade
@@ -100,7 +100,7 @@ template(name='post_card_small')
         .content.zoomer.card_small.invert
             // a.ui.header.zoomer(href="/#{group}/p/#{_id}") #{title}
             // a.ui.center.aligned.small.header.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
-            a.ui.center.aligned.grey.header(href=url target='_window')
+            a.ui.center.aligned.grey.header.title(href=url target='_window')
                 // |!{data.title} #{lowered_title}
                 |#{lowered_title}
             if embed
