--- a/client/client.jade
+++ b/client/client.jade
@@ -55,7 +55,7 @@ template(name='home')
                     i.yin.yang.loading.large.icon
                 else
                     i.search.icon
-                input.search_tag(type='text' value=query autofocus='')
+                input.search_tag(type='text' value=query autofocus='' placeholder='consult')
             each result_tags
                 +tag_picker
             .ui.hidden.divider
@@ -67,7 +67,7 @@ template(name='home')
                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    button.ui.compact.basic.large.circular.inverted.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    button.ui.compact.basic.large.circular.inverted.grey.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -126,5 +126,8 @@ template(name='post_card_small')
             a.ui.icon.compact.circular.basic.button(href="https://www.reddit.com#{permalink}" target='_window' title=domain)
                 // |#{domain}
                 i.external.icon
-            div
+            // div
+            .ui.tiny.invert.transparent.left.icon.input
+                i.plus.icon
+                input.add_tag(type='text' placeholder='...')
             .ui.hidden.divider            
