--- a/client/style.css
+++ b/client/style.css
@@ -17,6 +17,24 @@ body {
   /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
 }
+
+@keyframes fadeout {
+  from { opacity: 1}
+  to   { opacity: 0}
+}
+
+@keyframes fadein {
+  from { opacity: 0}
+  to   { opacity: 1}
+}
+
+.button, .selector, .card, .dark_mode, .ui.header, .ui.label, .item, p, img{
+    animation: fadein 1s !important;
+}
+
+.spacer {
+    height: 5px !important;
+}
 .header {
   font-family: 'Ubuntu', sans-serif !important; 
     
