--- a/client/client.jade
+++ b/client/client.jade
@@ -57,6 +57,7 @@ template(name='home')
                 else
                     i.search.icon
                 input.search_tag(type='text' value=query autofocus='' placeholder='search')
+            div
             each result_tags
                 +tag_picker
             .ui.hidden.divider
