--- a/client/style.css
+++ b/client/style.css
@@ -46,6 +46,14 @@ body {
     margin:2px !important;
 }
 
+.inline {
+    display: inline !important;
+}
+
+.thin {
+    font-weight: 300 !important;
+}
+
 input {
     border-radius: 20px !important;
 }
