--- a/client/style.css
+++ b/client/style.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background: rgba(200,200,200,1) !important;
-  filter: invert(1) !important; 
+  /*filter: invert(1) !important; */
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -28,8 +28,8 @@ body {
   to   { opacity: 1}
 }
 
-.button, button, .selector, .card, .dark_mode, .ui.header, .ui.label, .item, p, img{
-    animation: fadein 1s !important;
+.button, button, .selector, .icon, .card, .dark_mode, .ui.header, .ui.label, .item, p, img {
+    animation: fadein .5s !important;
 }
 
 .spacer {
@@ -77,8 +77,24 @@ input {
     padding: 1em;
     /*padding-left: 1em;*/
 }
+.smallscroll{
+    max-height: 20vh !important;
+    /*min-height: 50vh !important;*/
+    /* padding: 5px !important;
+    border-radius: 7px !important;
+    border-width: 1px !important;
+    border-color: grey !important;
+    border-style: solid !important; */
+    overflow-y:scroll;
+    overflow-x:hidden;
+    /*z-index:1001;*/
+    /*margin-top: 1em; */
+    /*padding-top: .5em; */
+    padding: 1em;
+    /*padding-left: 1em;*/
+}
 
 /*iframe, img, a, .image, .invert, .button {*/
-.button, .text, button, .invert{
-    filter: invert(1) !important; 
+.button, .text, button, .invert {
+    /*filter: invert(1) !important; */
 }
