--- a/client/client.jade
+++ b/client/client.jade
@@ -42,7 +42,6 @@ template(name='home')
     .ui.stackable.grid
         .sixteen.wide.left.aligned.column.seg
             if picked_tags
-                    
                 .ui.left.icon.big.transparent.input
                     if is_loading
                         i.yin.yang.loading.large.icon
@@ -63,15 +62,15 @@ template(name='home')
             |&nbsp;
             unless picked_tags
                 .ui.center.aligned.basic.segment
-                .ui.left.icon.massive.transparent.input
-                    if is_loading
-                        i.yin.yang.loading.large.icon
-                    else
-                        if nsfw_mode
-                            i.large.fire.icon
+                    .ui.icon.massive.input
+                        if is_loading
+                            i.yin.yang.loading.large.icon
                         else
-                            i.search.icon
-                    input.search_tag(type='text' value=query autofocus='' placeholder='search')
+                            if nsfw_mode
+                                i.large.fire.icon
+                            else
+                                i.yin.yang.large.icon
+                        input.search_tag(type='text' value=query autofocus='' placeholder='search')
                 
             unless simple
                 i.fire.icon
@@ -84,8 +83,10 @@ template(name='home')
             // div
             each result_tags
                 +tag_picker
-            .ui.hidden.divider
             .ui.four.column.centered.stackable.grid.scrolling.pushed
+                if alphas.count
+                    .column
+                        +alpha
                 each posts
                     +post_card_small
                 
@@ -126,9 +127,10 @@ template(name='post_card_small')
         .content.zoomer.card_small.invert
             // a.ui.header.zoomer(href="/#{group}/p/#{_id}") #{title}
             // a.ui.center.aligned.small.header.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
-            a.ui.center.aligned.invert.header.thin.title(href=url target='_window')
+            a.ui.invert.header.thin.title(href=url target='_window')
                 // |!{data.title} #{lowered_title}
                 |#{lowered_title}
+            span.ui.text {{ufrom data.created}}
             .spacer
             if embed
                 span.rounded.full
@@ -140,7 +142,6 @@ template(name='post_card_small')
             else if data.thumbnail_width
                 a(href=url target='_window')
                     img.ui.fluid.rounded.image.zoomer(src=data.thumbnail)    
-            span.ui.text {{ufrom data.created}}
             unless simple
                 i.circular.chevron.down.icon.dl.invert
                 span.invert
@@ -165,3 +166,88 @@ template(name='post_card_small')
                 unless simple
                     span.invert.smallscroll
                         |{{#markdown}} !{data.selftext_html} {{/markdown}}
+                        
+                        
+                        
+template(name='alpha')
+    a.ui.header.toggle_alpha.pointer
+        i.large.brain.icon
+        | wolfram alpha
+        // unless viewing_alpha
+        // each alphas
+        //     with response.queryresult
+        //         each split_datatypes
+        //             .ui.button.basic.compact.buton.select_datatype
+        //                 |#{this}
+            
+            // if viewing_alpha
+        // if skv_is 'loading_alpha' true
+        //     .ui.header 
+        //         i.large.brain.loading.icon 
+        //         |alpha...
+        // else
+    each alphas
+        i.large.brain.icon
+        if response.queryresult
+            with response.queryresult
+                .ui.inline.header #{datatypes}
+                each split_datatypes
+                    .ui.button.basic.compact.buton.select_datatype
+                        |#{this}
+                // .ui.list
+                    // .item success: #{success}
+                    // .item error: #{error}
+                    // .item numpods: #{numpods}
+                    // .item datatypes: #{datatypes}
+                    //     each datatypes
+                    //         .ui.button
+                    //             |#{this}
+                    // .item timedout: #{timedout}
+                    // .item timedoutpods: #{timedoutpods}
+                    // .item timing: #{timing}
+                    // .item parsetiming: #{parsetiming}
+                    // .item parsetimedout: #{parsetimedout}
+                    // .item recalculate: #{recalculate}
+                    // .item id: #{id}
+                    // .item host: #{host}
+                    // .item server: #{server}
+                    // .item related: #{related}
+                    // .item version: #{version}
+                each pods
+                    span.say
+                        .ui.small.inline.middle.aligned.header.middled #{title}
+                        .ui.small.inline.header #{title}
+                        div
+                        // .item #{scanner}
+                        // .item id #{id}
+                        // .item position #{position}
+                        // .item error #{error}
+                        // .item numsubpods #{numsubpods}
+                        // .item subpods
+                        // .ui.list
+                        each subpods
+                            .ui.small.inline.header #{title}
+                            img.ui.zoomer.pointer.image.invert.alphatemp(src=img.src)
+                            // .item.alphatemp
+                            span.say #{plaintext}
+                            // .item title: #{title}
+                            // .item primary: #{primary}
+                    // each tags
+                    //     .ui.label #{this}
+                    // .alphatemp voice: #{voice}
+                    //   div assumptions": {
+                    //     "type": "Clash",
+                    //     "word": "time",
+                    //     "template": "Assuming \"${word}\" is ${desc1}. Use as ${desc2} instead",
+                    //     "count": 4,
+                    //     "values": [
+                    //       {
+                    //         "name": "CalendarWord",
+                    //         "desc": " referring to a calendar computation",
+                    //         "input": "*C.time-_*CalendarWord-"
+                    
+                    
+            // if many_tags
+            //     each alpha_singles
+            //         if response.queryresult
+            //             +alpha 
