--- a/client/post.jade
+++ b/client/post.jade
@@ -3,7 +3,7 @@ template(name='post_view')
         .ui.stackable.grid
             .row 
                 .twelve.wide.column
-                    a.ui.large.button(href="/#{group}")
+                    a.ui.large.button(href="/g/#{group}")
                         i.chevron.left.icon
                         |#{group}
                     .ui.inline.header.say(class=emotion_color)
