--- a/client/style.css
+++ b/client/style.css
@@ -6,13 +6,13 @@ body {
   /*font-size: 100% !important; */
   /* line-height: 200% !important; */
   /*background: rgba(0,0,0,.1) !important; */
-  /*scroll-behavior: smooth;*/
+  scroll-behavior: smooth;
   /*margin-top: 5em;*/
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
 
   background: rgba(200,200,200,1) !important;
-  /*filter: invert(1) !important; */
+  filter: invert(1) !important; 
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -65,7 +65,7 @@ body {
 }
 
 input {
-    border-radius: 42px !important;
+    /*border-radius: 42px !important;*/
 }
 .input {
     margin-top: 10px !important;
@@ -106,7 +106,7 @@ input {
 
 /*iframe, img, a, .image, .invert, .button {*/
 .button, .text, button, .invert {
-    /*filter: invert(1) !important; */
+    filter: invert(1) !important; 
 }
 
 .smallscroll::-webkit-scrollbar {
