--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,5 +1,5 @@
 template(name='nav')
-    .ui.fluid.attached.large.borderless.twelve.item.menu.hscroll
+    .ui.fluid.attached.borderless.twelve.item.menu.hscroll
         a.icon.item.toggle_sidebar
             i.large.bars.icon
         a.icon.item(href="/") 
